# blind

./: .gitignore
blind/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_SUMMARY.md  COMPLETE_GUIDE.md  COMPLETE_SETUP_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  NEW_VISUALIZATION_GUIDE.md  PHASE1_IMPLEMENTATION.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_WIDE_ARCHITECTURE.md  QUICKSTART.md  README.md  SETUP.md  TESTING_GUIDE_PHASE3.md  TEST_GUIDE.md  TROUBLESHOOTING.md  USAGE.md  USER_GUIDE.md  activate_venv.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json
blind/examples/: sample.py
blind/examples/multi_file_example/: README.md  calculator.py  main.py  utils.py
blind/python/: __main__.py  tracer.py
blind/src/: FlowVisualizerPanel.ts  FlowVisualizerPanelNew.ts  TraceServer.ts  extension.ts
blind/tracers/python/: __init__.py  __main__.py  tracer.py
blind/webview/: index.html  vite.config.ts
blind/webview/src/: App.css  App.tsx  main.tsx
blind/webview/src/components/: CallStack.css  CallStack.tsx  CodeContext.css  CodeContext.tsx  ExecutionNode.tsx  ExportPanel.css  ExportPanel.tsx  FileBlock.css  FileBlock.tsx  FileNode.css  FileNode.tsx  FilterPanel.css  FilterPanel.tsx  FlowCanvas.css  FlowCanvas.tsx  FunctionCallTree.css  FunctionCallTree.tsx  Inspector.css  Inspector.tsx  InspectorEnhanced.css  InspectorEnhanced.tsx  Timeline.css  Timeline.tsx  Toolbar.tsx  ValueTooltip.css  ValueTooltip.tsx
blind/webview/src/hooks/: useKeyboardShortcuts.ts  usePanelPersistence.ts  usePerformanceOptimizations.ts  (+3 more)
(+2 files in other folders)
