[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blind-python"
version = "1.0.0"
description = "Python execution tracer for Blind - Multi-language execution flow visualizer"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Animesh Dhillon" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools]
packages = ["blind"]

[tool.setuptools.package-dir]
blind = "tracers/python"